Adds the capability to track whether the BattOr connection is open

This is the first part of a fix aimed to prevent us from slow flushing
if the BattOr connection is already open. This used to be how it worked,
but recent improvements we made to the retry protocol caused a
regression in clock sync latency.

TBR=nednguyen@google.com

Bug: 816470
Change-Id: Ibfceb02e62c333ff3d2b32c8bd52f5a1277bbe70
Reviewed-on: https://chromium-review.googlesource.com/946515
Reviewed-by: Charlie Andrews <charliea@chromium.org>
Commit-Queue: Charlie Andrews <charliea@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540936}
Former-commit-id: c27595f5c34ecd0d00e4638832fcf8f478eea048